traefik/k8s/service_traefik-web-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: kube-system
#  annotations:
#    traefik.backend.circuitbreaker: "NetworkErrorRatio() > 0.5"
spec:
  selector:
    app: traefik-proxy
    tier: proxy
  ports:
  - port: 80
    targetPort: 8080
