traefik/k8s/ingress_traefik-web-ui.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: traefik.k8s.datashades.links.com.au
    http:
      paths:
      - path: "/"
        backend:
          serviceName: traefik-web-ui
          servicePort: 80
